--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     // Password protection
     const correctPassword = "3242";
     function checkPassword() {
-        const userPassword = prompt("Enter Password to Access the Page:");
+        const userPassword = prompt("Enter Password To Access The App:");
         if (userPassword !== correctPassword) {
             alert("Incorrect Password! Please try again.");
             location.reload(); // Reload the page for password prompt
