--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
             alert("Incorrect Password! Please try again.");
             location.reload(); // Reload the page for password prompt
         }
+
+        }, 2000); // Delay for 2 seconds
     }
     window.onload = checkPassword;
 
