--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
         /* Loading spinner styling */
         .loading {
-            border: 4px solid #f3f3f3;
+            border: 4px solid #red;
             border-top: 4px solid #00796b;
             border-radius: 50%;
-            width: 30px;
-            height: 30px;
+            width: 50px;
+            height: 50px;
             animation: spin 1s linear infinite;
             margin: 0 auto;
             display: none;
