--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     const correctPassword = "3242";
     function checkPassword() {
         setTimeout(() => {
-            const userPassword = prompt("Enter Password to Access the Page:");
+            const userPassword = prompt("Enter Password to Access the App:");
             if (userPassword !== correctPassword) {
                 alert("Incorrect Password! Please try again.");
                 location.reload(); // Reload the page for password prompt
@@ -161,6 +161,9 @@
     // CNIC-to-image mapping
     const cnicImages = {
         "03087752693": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvL0EOgVSKJTwOTSOTye8N5trR9QTf6Q87hA&s",
+        "03007788990": "https://i.ibb.co/NCfkC0P/20241111-064734.jpg",
+        "03489876543": "https://i.ibb.co/yVdZNvw/images-2.jpg",
+        "03122454680": "https://i.ibb.co/tmNrC78/20241118-180154.jpg",
         "03006789098": "https://i.ibb.co/tZw5HXb/20241111-064518.jpg",
     };
 
